<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_ai_assistant"
        android:icon="@drawable/ic_ai_assistant"
        android:title="@string/nav_ai_assistant" />

    <item
        android:id="@+id/nav_meals"
        android:icon="@drawable/ic_nav_meals"
        android:title="@string/nav_meals" />

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_workout"
        android:icon="@drawable/ic_nav_workout"
        android:title="@string/nav_workout" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/nav_profile" />

</menu>
